--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,7 +5,7 @@
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
-BUILDDIR      = _build
+BUILDDIR      = /Users/bcf/git/edittag/myhtmldocs/
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
